--- a/build
+++ b/build
@@ -1,3 +1,3 @@
 #! /bin/sh
 
-gcc source/test.c -o test -Wall -Wpedantic -Wno-extra-semi
+gcc source/test.c -o main -Wall -Wextra -Wpedantic -Wno-extra-semi -Wno-unused-parameter
