--- a/build
+++ b/build
@@ -1,3 +1,3 @@
 #! /bin/sh
 
-clang source/test.c -o main -Wall -Wextra -Wpedantic -Wno-extra-semi -Wno-unused-parameter -g
+clang source/wlang/**/*.c -o main -Wall -Wextra -Wpedantic -Wno-extra-semi -Wno-unused-parameter -g -Isource
